Web services URLs moved into a central location